force-app/main/default/objects/Driver__c/fields/Account_Driver__c.field-meta.xml
<CustomField>
    <fullName>Account_Driver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>User Name</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Drivers</relationshipLabel>
    <relationshipName>Drivers</relationshipName>
    <type>Lookup</type>
</CustomField>