force-app/main/default/objects/Driver__c/fields/Age_Range__c.field-meta.xml
<CustomField>
    <fullName>Age_Range__c</fullName>
    <formula>IF(MONTH(TODAY())&gt;MONTH( Dob__c ),YEAR(TODAY())-YEAR(Dob__c),IF(AND(MONTH(TODAY())=MONTH(Dob__c),DAY(TODAY())&gt;=DAY(Dob__c)),YEAR(TODAY())-YEAR(Dob__c),(YEAR(TODAY())-YEAR(Dob__c))-1))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Age Range</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>