force-app/main/default/objects/Driver__c/fields/Agency__c.field-meta.xml
<CustomField>
    <fullName>Agency__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Agency</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Drivers (Agency)</relationshipLabel>
    <relationshipName>Drivers2</relationshipName>
    <type>Lookup</type>
</CustomField>