force-app/main/default/objects/Driver__c/fields/created_at__c.field-meta.xml
<CustomField>
    <fullName>created_at__c</fullName>
    <label>Created_At</label>
    <type>DateTime</type>
</CustomField>