force-app/main/default/objects/Driver__c/fields/Deleted_Driver__c.field-meta.xml
<CustomField>
    <fullName>Deleted_Driver__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Deleted Driver</label>
    <type>Checkbox</type>
</CustomField>