force-app/main/default/objects/Driver__c/fields/Dob__c.field-meta.xml
<CustomField>
    <fullName>Dob__c</fullName>
    <label>DOB</label>
    <type>Date</type>
</CustomField>