force-app/main/default/objects/Driver__c/fields/License_Country__c.field-meta.xml
<CustomField>
    <fullName>License_Country__c</fullName>
    <label>License Country</label>
    <length>40</length>
    <type>Text</type>
</CustomField>