force-app/main/default/objects/Driver__c/fields/License_Expire__c.field-meta.xml
<CustomField>
    <fullName>License_Expire__c</fullName>
    <label>License Expiration</label>
    <type>Date</type>
</CustomField>