force-app/main/default/objects/Driver__c/fields/license_number__c.field-meta.xml
<CustomField>
    <fullName>license_number__c</fullName>
    <label>License Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>