force-app/main/default/objects/Driver__c/fields/license_number_counter__c.field-meta.xml
<CustomField>
    <fullName>license_number_counter__c</fullName>
    <label>License Number Counter</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>