force-app/main/default/objects/Driver__c/fields/License_state__c.field-meta.xml
<CustomField>
    <fullName>License_state__c</fullName>
    <label>License State</label>
    <length>255</length>
    <type>Text</type>
</CustomField>