force-app/main/default/objects/Driver__c/fields/LN_With_Country__c.field-meta.xml
<CustomField>
    <fullName>LN_With_Country__c</fullName>
    <label>LN With Country</label>
    <length>255</length>
    <type>Text</type>
</CustomField>