force-app/main/default/objects/Driver__c/fields/Primary_insured__c.field-meta.xml
<CustomField>
    <fullName>Primary_insured__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Primary insured</label>
    <type>Checkbox</type>
</CustomField>