force-app/main/default/objects/Driver__c/fields/Quote_c__c.field-meta.xml
<CustomField>
    <fullName>Quote_c__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Quote (c)</label>
    <referenceTo>Quote__c</referenceTo>
    <relationshipLabel>Quoted Drivers</relationshipLabel>
    <relationshipName>Drivers</relationshipName>
    <type>Lookup</type>
</CustomField>