force-app/main/default/objects/Driver__c/fields/updated_at__c.field-meta.xml
<CustomField>
    <fullName>updated_at__c</fullName>
    <label>Updated_At</label>
    <type>DateTime</type>
</CustomField>