force-app/main/default/objects/Driver__c/fields/User_id__c.field-meta.xml
<CustomField>
    <fullName>User_id__c</fullName>
    <label>User_Id</label>
    <length>10</length>
    <type>Text</type>
</CustomField>