force-app/main/default/objects/Driver__c/fields/Watercraft__c.field-meta.xml
<CustomField>
    <fullName>Watercraft__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Watercraft</label>
    <referenceTo>Watercraft__c</referenceTo>
    <relationshipLabel>Drivers</relationshipLabel>
    <relationshipName>Drivers</relationshipName>
    <type>Lookup</type>
</CustomField>